--- a/src/scss/admin/_dashboard.scss
+++ b/src/scss/admin/_dashboard.scss
@@ -119,4 +119,8 @@
         @extend .dashboard__contenedor;
         @include m.contenedor-md;
     }
+
+    &__grafica{
+        @include m.contenedor-md;
+    }
 }
