--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -79,6 +79,13 @@
     margin: 6rem 0 3rem 0;
     text-align: center;
 }
+@mixin descripcion-pagina{
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: v.$delgada;
+    color: v.$gris-oscuro;
+    margin-bottom: 5rem;
+}
 
 @mixin texto-fluido($min, $max){
     font-size: clamp($min, -0.8rem + 10vw ,$max);
@@ -93,6 +100,7 @@
     color: v.$blanco;
     text-align: center;
     margin-bottom: 2rem;
+    white-space: nowrap;
     @include tablet{
         text-align: left;
         margin: 0;
@@ -113,23 +121,23 @@
             font-family: "Font Awesome 6 Brands";
         }
 
-        &[href*="https://facebook.com"]::before {
+        &[href*="facebook.com"]::before {
             content: "\f39e";
         }
-        &[href*="https://github.com"]::before {
+        &[href*="github.com"]::before {
             content: "\f09b";
         }
         
-        &[href*="https://tiktok.com"]::before {
+        &[href*="tiktok.com"]::before {
             content: "\e07b";
         }
-        &[href*="https://instagram.com"]::before {
+        &[href*="instagram.com"]::before {
             content: "\f16d";
         }
-        &[href*="https://youtube.com"]::before {
+        &[href*="youtube.com"]::before {
             content: "\f167";
         }
-        &[href*="https://twitter.com"]::before {
+        &[href*="twitter.com"]::before {
             content: "\f099";
         }
     }
@@ -179,4 +187,19 @@
         font-size: 1.4rem;
         font-weight: v.$bold;
     }
+}
+
+@mixin card{
+    border: 1px solid lighten($color: v.$gris, $amount: 10);
+    padding: 3rem;
+
+    &__nombre{
+        font-weight: v.$black;
+        font-size: 2.6rem;
+        margin: 2rem 0;
+    }
+}
+
+@mixin bg-gradient($bg_color){
+    background-image: linear-gradient(to left top, $bg_color, lighten($bg_color,15%));
 }
