--- a/src/scss/ui/formulario/_formulario.scss
+++ b/src/scss/ui/formulario/_formulario.scss
@@ -82,7 +82,8 @@
         width: auto;
         align-self: flex-start;
 
-        &--registrar{
+        &--registrar,
+        &--full{
             width: 100%;
         }
     }
